--- a/style.css
+++ b/style.css
@@ -78,3 +78,54 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+/* Custom */
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+body {
+  color: white;
+  background-color: #1b244a;
+}
+
+h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.score-box {
+}
+
+.score {
+  width: 155px;
+  height: 120px;
+  background-color: #080001;
+  color: #f94f6d;
+  margin-bottom: 24px;
+  font-size: 5.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.score-actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.score-actions button {
+  border-radius: 5px;
+  color: #9aabd8;
+  background-color: inherit;
+  border: 2px solid currentColor;
+  cursor: pointer;
+}
